--- a/client/src/assets/styles/components/MaskHeader.scss
+++ b/client/src/assets/styles/components/MaskHeader.scss
@@ -247,6 +247,7 @@ i.cal-date-nav {
 .habit-description-label,
 .habit-description-label div:first-child {
   min-height: 6rem;
+  width: 100%;
 }
 
 #subnav .nav-links > li.hoverable:hover {
@@ -336,6 +337,7 @@ span.logo svg path,
   .habit-description-label,
   .habit-description-label div:first-child {
     min-height: 13rem;
+    width: 104%;
   }
 
   i.cal-date-nav {
