--- a/client/src/assets/styles/components/global.pcss
+++ b/client/src/assets/styles/components/global.pcss
@@ -33,7 +33,7 @@ main.wrapper {
 
 #hamburger-wrapper input:checked ~ nav {
   margin-right: 0.1rem;
-  transform: translateX(-134%);
+  transform: translateX(-128%);
   transition: transform 0.7s ease-in;
   -webkit-transition: transform 700ms;
   -webkit-transition: -webkit-transform 200ms;
