--- a/client/src/assets/styles/components/typography.pcss
+++ b/client/src/assets/styles/components/typography.pcss
@@ -152,7 +152,8 @@ nav .menu-card p {
 }
 
 .resp-nav-link {
-  @apply font-semibold text-2xl;
+  font-size: 1rem;
+  @apply font-semibold md:text-2xl;
 }
 
 .resp-nav-link:active::before,
