--- a/client/src/styles/bundled-styles.css
+++ b/client/src/styles/bundled-styles.css
@@ -578,7 +578,7 @@ nav .menu-card p {
   text-align: center;
 }
 .resp-nav-link {
-  font-size: 1.5rem;
+  font-size: 1rem;
   font-weight: 600;
   line-height: 2rem;
 }
